Ugh, shading breaks MRJ in Fory and FastJSON2.